<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.santmani.Activity_About">


    <LinearLayout
        android:id="@+id/about_logo"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/action_bar_bg"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:contentDescription="@string/about_head_img"
            android:src="@drawable/santmani_logo" />

    </LinearLayout>

    <TextView
        android:id="@+id/about_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_logo"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/about_body"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/feedback_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_body"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_feedback"
            android:src="@drawable/ic_baseline_email_24" />

        <View
            android:layout_width="5dp"
            android:layout_height="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_email"
            android:textColor="#8bc34a"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedback_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_me"
            android:textSize="16sp"
            android:textStyle="bold" />

        <View
            android:layout_width="5dp"
            android:layout_height="0dp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_share"
            android:src="@drawable/ic_baseline_share_24" />

    </LinearLayout>

    <TextView
        android:id="@+id/app_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:gravity="bottom"
        android:text="@string/app_version"
        android:textStyle="bold" />

</RelativeLayout>
